--- a/milestone2-reddit.ipynb
+++ b/milestone2-reddit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "c9e432ee",
    "metadata": {
     "scrolled": true
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "3614d943",
    "metadata": {
     "scrolled": true
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "8e069c79",
    "metadata": {
     "scrolled": false
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "4cebe2b5",
    "metadata": {
     "scrolled": true
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "5dabd124",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "ee458381",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "c47d7e8a",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "65532efc",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "7c483fe4",
    "metadata": {},
    "outputs": [
@@ -109,14 +109,14 @@
      "text": [
       "Stranger Things Season 4 Episode Discussion Hub\n",
       "Stranger Things Season 4 Volume 2 Series Discussion\n",
-      "Season 3 ftw!!\n",
-      "\"Nancy? Is this what they call familial love?\" \"I guess so, Mike.\"\n",
-      "We drew El at a chalk festival in Ohio\n",
-      "The Will/Mike/El love triangle was not necessary if they're not going to do anything with it.\n",
-      "Happy October 001st\n",
-      "Spotted a familiar house on my Roku's Halloween screensaver\n",
-      "Mike's admiration for Eddie is so underrated. He even started dressing like him!\n",
-      "Reminder that Will has pulled the most girls out of the party\n"
+      "😳😳\n",
+      "[OC] My 12ft Eddie Munson with a 9ft guitar. Happy Halloween.\n",
+      "Observation I made on rewatch :/\n",
+      "An interesting title\n",
+      "Wanted to share a progress update on my Lifesized Demogorgan ripping a hole through the Upside Down. 3d Printed in over 100 pieces. Coming this weekend to MotorCity ComicCon Oct 14-16\n",
+      "How was their relationship like back in Lenora? Any headcanons?\n",
+      "only truth.\n",
+      "Here’s Vecna and a friend that I sculpted for our Halloween display this year.\n"
      ]
     }
    ],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "id": "1dd75030",
    "metadata": {
     "scrolled": true
@@ -170,7 +170,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Stranger Things Season 4 Episode Discussion Hub</td>\n",
-       "      <td>791</td>\n",
+       "      <td>801</td>\n",
        "      <td>vwpzsx</td>\n",
        "      <td>StrangerThings</td>\n",
        "      <td>https://www.reddit.com/r/StrangerThings/commen...</td>\n",
@@ -181,101 +181,101 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Stranger Things Season 4 Volume 2 Series Discu...</td>\n",
-       "      <td>9316</td>\n",
+       "      <td>9337</td>\n",
        "      <td>vow5wm</td>\n",
        "      <td>StrangerThings</td>\n",
        "      <td>https://www.reddit.com/r/StrangerThings/commen...</td>\n",
-       "      <td>44521</td>\n",
+       "      <td>44547</td>\n",
        "      <td># In this thread you can discuss the entirety ...</td>\n",
        "      <td>1.656665e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Season 3 ftw!!</td>\n",
-       "      <td>1292</td>\n",
-       "      <td>xtuahy</td>\n",
+       "      <td>😳😳</td>\n",
+       "      <td>6759</td>\n",
+       "      <td>y0mn2g</td>\n",
        "      <td>StrangerThings</td>\n",
-       "      <td>https://www.reddit.com/gallery/xtuahy</td>\n",
-       "      <td>151</td>\n",
+       "      <td>https://i.redd.it/vbtgxfb0y0t91.jpg</td>\n",
+       "      <td>174</td>\n",
        "      <td></td>\n",
-       "      <td>1.664731e+09</td>\n",
+       "      <td>1.665428e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>\"Nancy? Is this what they call familial love?\"...</td>\n",
-       "      <td>308</td>\n",
-       "      <td>xtz4oe</td>\n",
+       "      <td>[OC] My 12ft Eddie Munson with a 9ft guitar. H...</td>\n",
+       "      <td>270</td>\n",
+       "      <td>y1543l</td>\n",
        "      <td>StrangerThings</td>\n",
-       "      <td>https://i.redd.it/6u3fyp51egr91.jpg</td>\n",
-       "      <td>24</td>\n",
+       "      <td>https://www.reddit.com/gallery/y1543l</td>\n",
+       "      <td>18</td>\n",
        "      <td></td>\n",
-       "      <td>1.664743e+09</td>\n",
+       "      <td>1.665483e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>We drew El at a chalk festival in Ohio</td>\n",
-       "      <td>874</td>\n",
-       "      <td>xtpn59</td>\n",
+       "      <td>Observation I made on rewatch :/</td>\n",
+       "      <td>995</td>\n",
+       "      <td>y0u050</td>\n",
        "      <td>StrangerThings</td>\n",
-       "      <td>https://i.redd.it/q8snx446ger91.jpg</td>\n",
-       "      <td>27</td>\n",
+       "      <td>https://i.redd.it/1yds0kd2h2t91.jpg</td>\n",
+       "      <td>62</td>\n",
        "      <td></td>\n",
-       "      <td>1.664719e+09</td>\n",
+       "      <td>1.665446e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>The Will/Mike/El love triangle was not necessa...</td>\n",
-       "      <td>140</td>\n",
-       "      <td>xtxvsp</td>\n",
+       "      <td>An interesting title</td>\n",
+       "      <td>172</td>\n",
+       "      <td>y120xx</td>\n",
        "      <td>StrangerThings</td>\n",
-       "      <td>https://www.reddit.com/r/StrangerThings/commen...</td>\n",
-       "      <td>113</td>\n",
-       "      <td>The writers created the most perfect set-up fo...</td>\n",
-       "      <td>1.664740e+09</td>\n",
+       "      <td>https://i.imgur.com/4vJDIJB.jpg</td>\n",
+       "      <td>9</td>\n",
+       "      <td></td>\n",
+       "      <td>1.665471e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Happy October 001st</td>\n",
-       "      <td>2467</td>\n",
-       "      <td>xtcgt5</td>\n",
+       "      <td>Wanted to share a progress update on my Lifesi...</td>\n",
+       "      <td>57</td>\n",
+       "      <td>y173f1</td>\n",
        "      <td>StrangerThings</td>\n",
-       "      <td>https://i.redd.it/m3mqpik8uar91.jpg</td>\n",
-       "      <td>35</td>\n",
+       "      <td>https://www.reddit.com/gallery/y173f1</td>\n",
+       "      <td>6</td>\n",
        "      <td></td>\n",
-       "      <td>1.664676e+09</td>\n",
+       "      <td>1.665489e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Spotted a familiar house on my Roku's Hallowee...</td>\n",
-       "      <td>115</td>\n",
-       "      <td>xtvbda</td>\n",
+       "      <td>How was their relationship like back in Lenora...</td>\n",
+       "      <td>1318</td>\n",
+       "      <td>y0j2hf</td>\n",
        "      <td>StrangerThings</td>\n",
-       "      <td>https://i.redd.it/knvsq19fmfr91.jpg</td>\n",
-       "      <td>11</td>\n",
+       "      <td>https://i.redd.it/w4x2w0gq80t91.jpg</td>\n",
+       "      <td>185</td>\n",
        "      <td></td>\n",
-       "      <td>1.664734e+09</td>\n",
+       "      <td>1.665419e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Mike's admiration for Eddie is so underrated. ...</td>\n",
-       "      <td>621</td>\n",
-       "      <td>xtjkjw</td>\n",
+       "      <td>only truth.</td>\n",
+       "      <td>178</td>\n",
+       "      <td>y0wjnq</td>\n",
        "      <td>StrangerThings</td>\n",
-       "      <td>https://v.redd.it/17k7vux6tcr91</td>\n",
-       "      <td>69</td>\n",
+       "      <td>https://i.redd.it/oumibxmc23t91.jpg</td>\n",
+       "      <td>15</td>\n",
        "      <td></td>\n",
-       "      <td>1.664700e+09</td>\n",
+       "      <td>1.665453e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Reminder that Will has pulled the most girls o...</td>\n",
-       "      <td>4181</td>\n",
-       "      <td>xt6skd</td>\n",
+       "      <td>Here’s Vecna and a friend that I sculpted for ...</td>\n",
+       "      <td>42</td>\n",
+       "      <td>y1433q</td>\n",
        "      <td>StrangerThings</td>\n",
-       "      <td>https://www.reddit.com/gallery/xt6skd</td>\n",
-       "      <td>218</td>\n",
+       "      <td>https://www.reddit.com/gallery/y1433q</td>\n",
+       "      <td>9</td>\n",
        "      <td></td>\n",
-       "      <td>1.664660e+09</td>\n",
+       "      <td>1.665479e+09</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -283,55 +283,55 @@
       ],
       "text/plain": [
        "                                               title  score      id  \\\n",
-       "0    Stranger Things Season 4 Episode Discussion Hub    791  vwpzsx   \n",
-       "1  Stranger Things Season 4 Volume 2 Series Discu...   9316  vow5wm   \n",
-       "2                                     Season 3 ftw!!   1292  xtuahy   \n",
-       "3  \"Nancy? Is this what they call familial love?\"...    308  xtz4oe   \n",
-       "4             We drew El at a chalk festival in Ohio    874  xtpn59   \n",
-       "5  The Will/Mike/El love triangle was not necessa...    140  xtxvsp   \n",
-       "6                                Happy October 001st   2467  xtcgt5   \n",
-       "7  Spotted a familiar house on my Roku's Hallowee...    115  xtvbda   \n",
-       "8  Mike's admiration for Eddie is so underrated. ...    621  xtjkjw   \n",
-       "9  Reminder that Will has pulled the most girls o...   4181  xt6skd   \n",
+       "0    Stranger Things Season 4 Episode Discussion Hub    801  vwpzsx   \n",
+       "1  Stranger Things Season 4 Volume 2 Series Discu...   9337  vow5wm   \n",
+       "2                                                 😳😳   6759  y0mn2g   \n",
+       "3  [OC] My 12ft Eddie Munson with a 9ft guitar. H...    270  y1543l   \n",
+       "4                   Observation I made on rewatch :/    995  y0u050   \n",
+       "5                               An interesting title    172  y120xx   \n",
+       "6  Wanted to share a progress update on my Lifesi...     57  y173f1   \n",
+       "7  How was their relationship like back in Lenora...   1318  y0j2hf   \n",
+       "8                                        only truth.    178  y0wjnq   \n",
+       "9  Here’s Vecna and a friend that I sculpted for ...     42  y1433q   \n",
        "\n",
        "        subreddit                                                url  \\\n",
        "0  StrangerThings  https://www.reddit.com/r/StrangerThings/commen...   \n",
        "1  StrangerThings  https://www.reddit.com/r/StrangerThings/commen...   \n",
-       "2  StrangerThings              https://www.reddit.com/gallery/xtuahy   \n",
-       "3  StrangerThings                https://i.redd.it/6u3fyp51egr91.jpg   \n",
-       "4  StrangerThings                https://i.redd.it/q8snx446ger91.jpg   \n",
-       "5  StrangerThings  https://www.reddit.com/r/StrangerThings/commen...   \n",
-       "6  StrangerThings                https://i.redd.it/m3mqpik8uar91.jpg   \n",
-       "7  StrangerThings                https://i.redd.it/knvsq19fmfr91.jpg   \n",
-       "8  StrangerThings                    https://v.redd.it/17k7vux6tcr91   \n",
-       "9  StrangerThings              https://www.reddit.com/gallery/xt6skd   \n",
+       "2  StrangerThings                https://i.redd.it/vbtgxfb0y0t91.jpg   \n",
+       "3  StrangerThings              https://www.reddit.com/gallery/y1543l   \n",
+       "4  StrangerThings                https://i.redd.it/1yds0kd2h2t91.jpg   \n",
+       "5  StrangerThings                    https://i.imgur.com/4vJDIJB.jpg   \n",
+       "6  StrangerThings              https://www.reddit.com/gallery/y173f1   \n",
+       "7  StrangerThings                https://i.redd.it/w4x2w0gq80t91.jpg   \n",
+       "8  StrangerThings                https://i.redd.it/oumibxmc23t91.jpg   \n",
+       "9  StrangerThings              https://www.reddit.com/gallery/y1433q   \n",
        "\n",
        "   num_comments                                               body  \\\n",
        "0             1  [S04E01 - The Hellfire Club](https://www.reddi...   \n",
-       "1         44521  # In this thread you can discuss the entirety ...   \n",
-       "2           151                                                      \n",
-       "3            24                                                      \n",
-       "4            27                                                      \n",
-       "5           113  The writers created the most perfect set-up fo...   \n",
-       "6            35                                                      \n",
-       "7            11                                                      \n",
-       "8            69                                                      \n",
-       "9           218                                                      \n",
+       "1         44547  # In this thread you can discuss the entirety ...   \n",
+       "2           174                                                      \n",
+       "3            18                                                      \n",
+       "4            62                                                      \n",
+       "5             9                                                      \n",
+       "6             6                                                      \n",
+       "7           185                                                      \n",
+       "8            15                                                      \n",
+       "9             9                                                      \n",
        "\n",
        "        created  \n",
        "0  1.657566e+09  \n",
        "1  1.656665e+09  \n",
-       "2  1.664731e+09  \n",
-       "3  1.664743e+09  \n",
-       "4  1.664719e+09  \n",
-       "5  1.664740e+09  \n",
-       "6  1.664676e+09  \n",
-       "7  1.664734e+09  \n",
-       "8  1.664700e+09  \n",
-       "9  1.664660e+09  "
+       "2  1.665428e+09  \n",
+       "3  1.665483e+09  \n",
+       "4  1.665446e+09  \n",
+       "5  1.665471e+09  \n",
+       "6  1.665489e+09  \n",
+       "7  1.665419e+09  \n",
+       "8  1.665453e+09  \n",
+       "9  1.665479e+09  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "id": "afb9c940",
    "metadata": {},
    "outputs": [
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "id": "71bdc492",
    "metadata": {},
    "outputs": [],
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "id": "9a162e52",
    "metadata": {},
    "outputs": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "id": "39566bc6",
    "metadata": {
     "scrolled": false
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "id": "5ecc4ff5",
    "metadata": {},
    "outputs": [],
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "id": "6100e1ed",
    "metadata": {
     "scrolled": true
@@ -587,7 +587,7 @@
        "Name: title, dtype: object"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,12 +598,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 24,
    "id": "f63f39b2",
    "metadata": {},
    "outputs": [],
    "source": [
     "#top_posts.isnull().count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "21f5b668",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(988, 8)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_posts.shape"
    ]
   },
   {
@@ -25171,7 +25192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
