--- a/Backup_696_M2/unsupervised_subreddit_full_posts.ipynb
+++ b/Backup_696_M2/unsupervised_subreddit_full_posts.ipynb
@@ -783,7 +783,7 @@
     "            \n",
     "    return tok\n",
     "\n",
-    "df_to_use_fin['token'] = df_to_use_fin['FULL_POSTS'].apply(token)"
+    "df_to_use_fin['token_lemma'] = df_to_use_fin['FULL_POSTS'].apply(token)"
    ]
   },
   {
@@ -1106,7 +1106,7 @@
    "source": [
     "val = []\n",
     "for i in range(len(df_to_use_fin)):\n",
-    "    val.append(df_to_use_fin['token'].iloc[i])"
+    "    val.append(df_to_use_fin['token_lemma'].iloc[i])"
    ]
   },
   {
@@ -1169,8 +1169,10 @@
    ],
    "source": [
     "import gensim\n",
-    "lda_model =  gensim.models.LdaMulticore(bow_corpus, num_topics = 10, id2word = dictionary, passes = 10,workers = 2)\n",
-    "lda_model"
+    "lda_model =  gensim.models.LdaMulticore(bow_corpus, num_topics = 10, \n",
+    "                                        id2word = dictionary, passes = 10,\n",
+    "                                        workers = 2)\n",
+    "#lda_model"
    ]
   },
   {
@@ -1229,25 +1231,111 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f99fa2b4",
+   "id": "9c1e360d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from gensim.models import CoherenceModel\n",
+    "# Compute Coherence Score\n",
+    "coherence_model_lda = CoherenceModel(model=lda_model, \n",
+    "                                     texts=df_to_use_fin['token_lemma'], \n",
+    "                                     dictionary=dictionary, coherence='c_v')\n",
+    "coherence_lda = coherence_model_lda.get_coherence()\n",
+    "print('\\nCoherence Score: ', coherence_lda)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "fd747d62",
    "metadata": {},
    "source": [
-    "### Finding ideal number of topics for LDA"
+    "### Finding ideal number of topics for LDA & Hyper parameter Tuning using ideal number of topics for LDA"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "6b3dee7e",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9620933",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Hyper parameter Tuning using ideal number of topics for LDA"
+    "# supporting function\n",
+    "def compute_coherence_values(corpus, dictionary, k, a, b):\n",
+    "    \n",
+    "    lda_model = gensim.models.LdaMulticore(corpus=corpus,\n",
+    "                                           id2word=dictionary,\n",
+    "                                           num_topics=k, \n",
+    "                                           random_state=100,\n",
+    "                                           chunksize=100,\n",
+    "                                           passes=10,\n",
+    "                                           alpha=a,\n",
+    "                                           eta=b)\n",
+    "    \n",
+    "    coherence_model_lda = CoherenceModel(model=lda_model, texts=data_lemmatized, dictionary=id2word, coherence='c_v')\n",
+    "    \n",
+    "    return coherence_model_lda.get_coherence()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "570679d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tqdm\n",
+    "grid = {}\n",
+    "grid['Validation_Set'] = {}\n",
+    "# Topics range\n",
+    "min_topics = 2\n",
+    "max_topics = 20\n",
+    "step_size = 1\n",
+    "topics_range = range(min_topics, max_topics, step_size)\n",
+    "# Alpha parameter\n",
+    "alpha = list(np.arange(0.01, 1, 0.3))\n",
+    "alpha.append('symmetric')\n",
+    "alpha.append('asymmetric')\n",
+    "# Beta parameter\n",
+    "beta = list(np.arange(0.01, 1, 0.3))\n",
+    "beta.append('symmetric')\n",
+    "# Validation sets\n",
+    "num_of_docs = len(corpus)\n",
+    "corpus_sets = [# gensim.utils.ClippedCorpus(corpus, num_of_docs*0.25), \n",
+    "               # gensim.utils.ClippedCorpus(corpus, num_of_docs*0.5), \n",
+    "               gensim.utils.ClippedCorpus(bow_corpus, num_of_docs*0.75), \n",
+    "               bow_corpus]\n",
+    "corpus_title = ['75% Corpus', '100% Corpus']\n",
+    "model_results = {'Validation_Set': [],\n",
+    "                 'Topics': [],\n",
+    "                 'Alpha': [],\n",
+    "                 'Beta': [],\n",
+    "                 'Coherence': []\n",
+    "                }\n",
+    "# Can take a long time to run\n",
+    "if 1 == 1:\n",
+    "    pbar = tqdm.tqdm(total=540)\n",
+    "    \n",
+    "    # iterate through validation corpuses\n",
+    "    for i in range(len(corpus_sets)):\n",
+    "        # iterate through number of topics\n",
+    "        for k in topics_range:\n",
+    "            # iterate through alpha values\n",
+    "            for a in alpha:\n",
+    "                # iterare through beta values\n",
+    "                for b in beta:\n",
+    "                    # get the coherence score for the given parameters\n",
+    "                    cv = compute_coherence_values(corpus=corpus_sets[i], dictionary=id2word, \n",
+    "                                                  k=k, a=a, b=b)\n",
+    "                    # Save the model results\n",
+    "                    model_results['Validation_Set'].append(corpus_title[i])\n",
+    "                    model_results['Topics'].append(k)\n",
+    "                    model_results['Alpha'].append(a)\n",
+    "                    model_results['Beta'].append(b)\n",
+    "                    model_results['Coherence'].append(cv)\n",
+    "                    \n",
+    "                    pbar.update(1)\n",
+    "    pd.DataFrame(model_results).to_csv('lda_tuning_results.csv', index=False)\n",
+    "    pbar.close()"
    ]
   },
   {
@@ -1401,7 +1489,7 @@
    "id": "20ad0cee",
    "metadata": {},
    "source": [
-    "### vectorization method"
+    "### Vectorization method"
    ]
   },
   {
@@ -1624,7 +1712,7 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "import pandas as pd\n",
     "tf_idf_vectorizor = TfidfVectorizer(max_features = 20000) #1\n",
-    "tf_idf = tf_idf_vectorizor.fit_transform(list(df_to_use_fin['FULL_POSTS'])) #2\n",
+    "tf_idf = tf_idf_vectorizor.fit_transform(list(df_to_use_fin['token'])) #2\n",
     "tf_idf_array = tf_idf.toarray() #3\n",
     "pd.DataFrame(tf_idf_array,\n",
     "           columns=tf_idf_vectorizor.get_feature_names()).head() #4"
@@ -1703,17 +1791,17 @@
    "outputs": [],
    "source": [
     "roberta_tokenizer=RobertaTokenizer.from_pretrained('roberta-base')#2\n",
-    "total_array=np.array([roberta_tokenizer.encode_plus(list(df_to_use_fin['FULL_POSTS'])[0],\n",
+    "total_array=np.array([roberta_tokenizer.encode_plus(list(df_to_use_fin['token'])[0],\n",
     "                      add_special_tokens=True,max_length = 60,truncation=True,\n",
     "   pad_to_max_length=True,return_attention_mask=True)['input_ids']])\n",
-    "for i in list(df_to_use_fin['FULL_POSTS'])[1:]:\n",
+    "for i in list(df_to_use_fin['token'])[1:]:\n",
     "    new_array=np.array([roberta_tokenizer.encode_plus(i,\n",
     "                        add_special_tokens=True, #3\n",
     "                        truncation=True,\n",
     "                        #padding='longest',\n",
     "                        max_length=60,\n",
     "                        pad_to_max_length=True,\n",
-    "                        return_attention_mask=True)['FULL_POSTS']])\n",
+    "                        return_attention_mask=True)['token']])\n",
     "    total_array = np.append(total_array,new_array,axis=0)\n",
     "#print(total_array)"
    ]
@@ -1861,7 +1949,7 @@
    "id": "8730bb33",
    "metadata": {},
    "source": [
-    "### Ideal number of topics"
+    "### Finding Ideal number of topics"
    ]
   },
   {
