--- a/Backup_696_M2/unsupervised_subreddit_full_posts_kmeans.ipynb
+++ b/Backup_696_M2/unsupervised_subreddit_full_posts_kmeans.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "56b789f1",
+   "id": "f63208f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "871e2f36",
+   "id": "f5f611e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2ecf170",
+   "id": "d8519c65",
    "metadata": {},
    "source": [
     "### Removing where the title or the selftext are null and removing the posts where the moderator for the Subreddit deleted/removed the post or the original author deleted/removed the post."
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b839ddbb",
+   "id": "e8e1e0fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0b108f6",
+   "id": "e7b030b6",
    "metadata": {},
    "source": [
     "### Only keeping posts from the release date of season 3 to current.  This just mirrors our supervised learning portion - although unrelated to one another except for both surround Stranger Things - we did not expect to bring back so much data from the pushshift api."
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f00de1e0",
+   "id": "5be04d27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "034da2f7",
+   "id": "985b4a09",
    "metadata": {},
    "source": [
     "### Text Cleaning Function, removes web address which holds links and appears when someone posts a png or jpg. They do many hand drawings of characters or scenes from the show in the subreddit. Then the function sets text to lower case and then removes all punctuation. Then utilizing spacy nlp we find the words lemma and then kick it out if it is a stop words, or is an instance of non alpha characters (such as numbers), then it removes if the word itself is less than 2 chars and finally removes the word if the word's part of speech is not in the allowed parts of speech list we have."
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0fd026ad",
+   "id": "cd8bb770",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c33c5b85",
+   "id": "b5af0e8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a030eee1",
+   "id": "2aac1e3c",
    "metadata": {},
    "source": [
     "### Getting the sentiment by utilizing vader "
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1765b481",
+   "id": "8f01d5dd",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26365176",
+   "id": "7a356f41",
    "metadata": {},
    "source": [
     "### Removal of posts where the tokenized and lemmatized title+selftext, aka POSTS, have a length less than 5.  We believe this will help create more defined topics and also alleviates the issues where the poster only posted a short blurb of words and some sort of image/vid or a hyperlink elsewhere."
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4bc2b94d",
+   "id": "18c07085",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dff69c4f",
+   "id": "7c36a81b",
    "metadata": {},
    "source": [
     "### Vectorization method - TF_IDF"
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "d9501137",
+   "id": "cf784776",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "c0778031",
+   "id": "2ac560d2",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc13a2eb",
+   "id": "af7543e7",
    "metadata": {},
    "source": [
     "### Kmeans clustering"
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e0412712",
+   "id": "ddcddf01",
    "metadata": {},
    "outputs": [
     {
@@ -366,8 +366,8 @@
     "                          random_state = 100,\n",
     "                         verbose=False, max_iter=1000)\n",
     "kmeans = kmeans_model.fit(tf_idf)\n",
-    "kmeans_clusters = kmeans.predict(tf_idf)\n",
-    "kmeans_distances = kmeans.transform(tf_idf)\n",
+    "#kmeans_clusters = kmeans.predict(tf_idf)\n",
+    "#kmeans_distances = kmeans.transform(tf_idf)\n",
     "sorted_centroids = kmeans.cluster_centers_.argsort()[:, ::-1]\n",
     "terms = tf_idf_vectorizor.get_feature_names_out()\n",
     "for i in range(num_clusters):\n",
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f092e457",
+   "id": "5422ad73",
    "metadata": {},
    "source": [
     "### Finding Ideal number of topics"
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30e4e1a7",
+   "id": "f11f146e",
    "metadata": {},
    "source": [
     "### Elbow Method"
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "2284be01",
+   "id": "28f8d04b",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a9f28a6",
+   "id": "41bc9a72",
    "metadata": {},
    "source": [
     "### The elbow method is not distinguishing a great K, this could be due to the data coming all from the same subreddit so it is not exhibiting well seperated clusters.  Also this means we will have to try a silouhette score instead which will help determine a ideal k.  The plot shows inertia keeps decreasing as K increases. Tthere is a turning point in terms of the inertia decreasing speed, and this is the Elbow point we should look for. Note that when we generate the data, we use three normal distributions. Thus it matches the result based \n",
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c78de7cc",
+   "id": "448df4e9",
    "metadata": {},
    "source": [
     "### Silouhette Score"
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "d51b19b0",
+   "id": "cad7c5e7",
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bd4bcae",
+   "id": "dbd99be3",
    "metadata": {},
    "source": [
     "### The best value is 1 and the worst value is -1 for silouhette scores. Values near 0 indicate overlapping clusters. Negative values generally indicate that a sample has been assigned to the wrong cluster, as a different cluster is more similar. It would make sense that there are overlapping clusters since the data stems from the same subreddit, hence have silhouette scores around 0. Just by eyeing both plots it looks like there is a slight bend around 14 and one around, 20 and 30.  We will run all 3 and get there various metrics out for comparison."
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0eab464",
+   "id": "a2bdb371",
    "metadata": {},
    "source": [
     "### Def below from sklearn documentation this we will use to pull out the different metrics for comparison. We are running on samples of 10K since this will take a while.\n",
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "672e93a6",
+   "id": "1258aaf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "f0cb9313",
+   "id": "9be42d01",
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9f8ed40",
+   "id": "d157214d",
    "metadata": {},
    "source": [
     "#### Time, Inertia, Homogeneity score, Completeness, V measure, Adjusted Rand Score, Adjusted Mutual Information Score, Silouhette Score.  From sklearn documentation:     \n",
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "6b98f98a",
+   "id": "f096242f",
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "6280ae74",
+   "id": "520aa171",
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7ebb2ea",
+   "id": "1ad4bbb2",
    "metadata": {},
    "source": [
     "### Based on our results it looks like 20 or 30 clusters would be ideal  20 has the highest silhouette score, but 30 clusters has the better values for the other metrics and came in second for silhouette score."
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "361360f1",
+   "id": "c90f905a",
    "metadata": {},
    "source": [
     "### Using KMeans with ideal number of Topics"
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "da085c59",
+   "id": "d907bab6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,8 +707,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "2d03b48c",
+   "execution_count": 120,
+   "id": "0ff89582",
    "metadata": {},
    "outputs": [
     {
@@ -716,245 +716,45 @@
      "output_type": "stream",
      "text": [
       "Cluster 0:\n",
-      " brenner\n",
-      " think\n",
-      " lab\n",
-      " season\n",
-      " know\n",
-      " power\n",
-      " child\n",
-      " theory\n",
-      " kid\n",
-      " kill\n",
-      "\n",
+      "['brenner', 'think', 'lab', 'season', 'know', 'power', 'child', 'theory', 'kid', 'kill']\n",
       "Cluster 1:\n",
-      " think\n",
-      " like\n",
-      " season\n",
-      " know\n",
-      " scene\n",
-      " thing\n",
-      " time\n",
-      " go\n",
-      " look\n",
-      " people\n",
-      "\n",
+      "['think', 'like', 'season', 'know', 'scene', 'thing', 'time', 'go', 'look', 'people']\n",
       "Cluster 2:\n",
-      " billy\n",
-      " max\n",
-      " season\n",
-      " think\n",
-      " scene\n",
-      " die\n",
-      " like\n",
-      " billys\n",
-      " know\n",
-      " character\n",
-      "\n",
+      "['billy', 'max', 'season', 'think', 'scene', 'die', 'like', 'billys', 'know', 'character']\n",
       "Cluster 3:\n",
-      " vecna\n",
-      " max\n",
-      " kill\n",
-      " think\n",
-      " theory\n",
-      " season\n",
-      " mind\n",
-      " like\n",
-      " know\n",
-      " upside\n",
-      "\n",
+      "['vecna', 'max', 'kill', 'think', 'theory', 'season', 'mind', 'like', 'know', 'upside']\n",
       "Cluster 4:\n",
-      " watch\n",
-      " season\n",
-      " time\n",
-      " thing\n",
-      " strange\n",
-      " finish\n",
-      " episode\n",
-      " start\n",
-      " like\n",
-      " good\n",
-      "\n",
+      "['watch', 'season', 'time', 'thing', 'strange', 'finish', 'episode', 'start', 'like', 'good']\n",
       "Cluster 5:\n",
-      " season\n",
-      " think\n",
-      " like\n",
-      " end\n",
-      " good\n",
-      " feel\n",
-      " time\n",
-      " go\n",
-      " thing\n",
-      " release\n",
-      "\n",
+      "['season', 'think', 'like', 'end', 'good', 'feel', 'time', 'go', 'thing', 'release']\n",
       "Cluster 6:\n",
-      " episode\n",
-      " season\n",
-      " think\n",
-      " watch\n",
-      " like\n",
-      " know\n",
-      " end\n",
-      " volume\n",
-      " scene\n",
-      " time\n",
-      "\n",
+      "['episode', 'season', 'think', 'watch', 'like', 'know', 'end', 'volume', 'scene', 'time']\n",
       "Cluster 7:\n",
-      " character\n",
-      " season\n",
-      " like\n",
-      " die\n",
-      " think\n",
-      " main\n",
-      " feel\n",
-      " death\n",
-      " kill\n",
-      " good\n",
-      "\n",
+      "['character', 'season', 'like', 'die', 'think', 'main', 'feel', 'death', 'kill', 'good']\n",
       "Cluster 8:\n",
-      " mike\n",
-      " season\n",
-      " like\n",
-      " love\n",
-      " think\n",
-      " friend\n",
-      " gay\n",
-      " say\n",
-      " max\n",
-      " know\n",
-      "\n",
+      "['mike', 'season', 'like', 'love', 'think', 'friend', 'gay', 'say', 'max', 'know']\n",
       "Cluster 9:\n",
-      " song\n",
-      " play\n",
-      " season\n",
-      " music\n",
-      " know\n",
-      " soundtrack\n",
-      " hill\n",
-      " vecna\n",
-      " episode\n",
-      " run\n",
-      "\n",
+      "['song', 'play', 'season', 'music', 'know', 'soundtrack', 'hill', 'vecna', 'episode', 'run']\n",
       "Cluster 10:\n",
-      " flayer\n",
-      " mind\n",
-      " vecna\n",
-      " upside\n",
-      " season\n",
-      " think\n",
-      " control\n",
-      " theory\n",
-      " like\n",
-      " demogorgon\n",
-      "\n",
+      "['flayer', 'mind', 'vecna', 'upside', 'season', 'think', 'control', 'theory', 'like', 'demogorgon']\n",
       "Cluster 11:\n",
-      " gate\n",
-      " open\n",
-      " season\n",
-      " upside\n",
-      " close\n",
-      " demogorgon\n",
-      " russian\n",
-      " hawkin\n",
-      " question\n",
-      " vecna\n",
-      "\n",
+      "['gate', 'open', 'season', 'upside', 'close', 'demogorgon', 'russian', 'hawkin', 'question', 'vecna']\n",
       "Cluster 12:\n",
-      " hopper\n",
-      " joyce\n",
-      " season\n",
-      " think\n",
-      " know\n",
-      " alive\n",
-      " end\n",
-      " like\n",
-      " theory\n",
-      " die\n",
-      "\n",
+      "['hopper', 'joyce', 'season', 'think', 'know', 'alive', 'end', 'like', 'theory', 'die']\n",
       "Cluster 13:\n",
-      " steve\n",
-      " nancy\n",
-      " robin\n",
-      " jonathan\n",
-      " season\n",
-      " think\n",
-      " like\n",
-      " dustin\n",
-      " love\n",
-      " character\n",
-      "\n",
+      "['steve', 'nancy', 'robin', 'jonathan', 'season', 'think', 'like', 'dustin', 'love', 'character']\n",
       "Cluster 14:\n",
-      " eddie\n",
-      " eddy\n",
-      " think\n",
-      " dustin\n",
-      " guitar\n",
-      " munson\n",
-      " die\n",
-      " like\n",
-      " play\n",
-      " know\n",
-      "\n",
+      "['eddie', 'eddy', 'think', 'dustin', 'guitar', 'munson', 'die', 'like', 'play', 'know']\n",
       "Cluster 15:\n",
-      " jason\n",
-      " eddie\n",
-      " think\n",
-      " lucas\n",
-      " people\n",
-      " murder\n",
-      " kill\n",
-      " die\n",
-      " girlfriend\n",
-      " like\n",
-      "\n",
+      "['jason', 'eddie', 'think', 'lucas', 'people', 'murder', 'kill', 'die', 'girlfriend', 'like']\n",
       "Cluster 16:\n",
-      " power\n",
-      " kali\n",
-      " think\n",
-      " season\n",
-      " lose\n",
-      " use\n",
-      " kid\n",
-      " theory\n",
-      " like\n",
-      " know\n",
-      "\n",
+      "['power', 'kali', 'think', 'season', 'lose', 'use', 'kid', 'theory', 'like', 'know']\n",
       "Cluster 17:\n",
-      " upside\n",
-      " world\n",
-      " light\n",
-      " season\n",
-      " time\n",
-      " portal\n",
-      " theory\n",
-      " hawkin\n",
-      " demogorgon\n",
-      " create\n",
-      "\n",
+      "['upside', 'world', 'light', 'season', 'time', 'portal', 'theory', 'hawkin', 'demogorgon', 'create']\n",
       "Cluster 18:\n",
-      " russian\n",
-      " american\n",
-      " hopper\n",
-      " demogorgon\n",
-      " season\n",
-      " russia\n",
-      " credit\n",
-      " theory\n",
-      " think\n",
-      " upside\n",
-      "\n",
+      "['russian', 'american', 'hopper', 'demogorgon', 'season', 'russia', 'credit', 'theory', 'think', 'upside']\n",
       "Cluster 19:\n",
-      " strange\n",
-      " thing\n",
-      " season\n",
-      " stranger\n",
-      " like\n",
-      " think\n",
-      " game\n",
-      " watch\n",
-      " know\n",
-      " want\n",
-      "\n"
+      "['strange', 'thing', 'season', 'stranger', 'like', 'think', 'game', 'watch', 'know', 'want']\n"
      ]
     }
    ],
@@ -963,14 +763,17 @@
     "terms = tf_idf_vectorizor.get_feature_names_out()\n",
     "for i in range(num_clusters):\n",
     "    print(\"Cluster %d:\" % i)\n",
+    "    tops = []\n",
     "    for j in sorted_centroids[i, :10]:\n",
-    "        print(' %s' % terms[j])\n",
-    "    print()"
+    "        curr_word = terms[j]\n",
+    "        tops.append(terms[j])\n",
+    "        #print(' %s' % terms[j])\n",
+    "    print(tops)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5beb24df",
+   "id": "14183837",
    "metadata": {},
    "source": [
     "### Visualizing our Clusters"
@@ -979,7 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "5d53e494",
+   "id": "9bf172d5",
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea3142fa",
+   "id": "381098a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1159,7 +962,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd30a567",
+   "id": "9406c5e8",
    "metadata": {},
    "source": [
     "### Possibly add on features of date of post and sentiment compound to help cluster, this doesnt seem like these feature add ons would be out of scope or \"cheating\" since we would always know when a subreddit post was made and the sentiment is a calculation"
@@ -1168,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef270103",
+   "id": "43ea2d0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1178,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e85aaec",
+   "id": "cb76ffc4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1186,7 +989,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74756f8d",
+   "id": "3310af83",
    "metadata": {},
    "outputs": [],
    "source": []
